# 2DGRT

./: CMakeLists.txt  README.md  render.py  render_port.py  train.py
arguments/: __init__.py
example/: renderer.py
gaussian_renderer/: __init__.py  network_gui.py
gtracer.egg-info/: SOURCES.txt  requires.txt  top_level.txt
gtracer1/: raytracer.py
scene/: __init__.py  cameras.py  gaussian_model.py
src/optix/: gaussiantrace_forward.cu
tracer/: CMakeLists.txt
tracer/example/: gaussian.py  renderer.py
tracer/gtracer/: raytracer.py
tracer/src/: bindings.cu
tracer/src/optix/: gaussiantrace_backward.cu  gaussiantrace_forward.cu
utils/: general_utils.py  loss_utils.py  mesh_utils.py  render_utils.py
